# -Outscal-Pokemon

./: .gitignore
Pokemon/: CMakeLists.txt  Grass.h  PokemonChoice.h  PokemonType.h  main  main.cpp
Pokemon/BattleManager/: BattleManager.cpp  BattleManager.h
Pokemon/Enums/: PokemonType.h
Pokemon/Game/: Game.cpp  Game.h
Pokemon/Player/: Player.cpp  Player.h
Pokemon/Pokemon/: Pokemon.cpp  Pokemon.h
Pokemon/ProfessorOak/: ProfessorOak.cpp  ProfessorOak.h
Pokemon/Utility/: Utility.cpp
Pokemon/WildEncounterManager/: WildEncounterManager.cpp  WildEncounterManager.h
Pokemon/include/Battle/: BattleManager.h  BattleState.h  WildEncounterManager.cpp  WildEncounterManager.h
Pokemon/include/Character/: ProfessorOak.h
Pokemon/include/Character/Player/: Player.h
Pokemon/include/Main/: Game.h
Pokemon/include/Pokemon/: Grass.h  IStatusEffect.h  Move.h  Pokemon.h  PokemonChoice.h  PokemonType.h
Pokemon/include/Pokemon/Pokemons/: Bulbasaur.h  Caterpie.h  Charmander.h  Pidgey.h  Pikachu.h  Squirtle.h  Zubat.h
Pokemon/include/Pokemon/Status Effects/: ParalyzedEffect.h  StatusEffectType.h
Pokemon/include/Utility/: Utility.h
Pokemon/src/Battle/: BattleManager.cpp  WildEncounterManager.cpp
Pokemon/src/Character/: ProfessorOak.cpp
Pokemon/src/Character/Player/: Player.cpp
Pokemon/src/Main/: Game.cpp
Pokemon/src/Pokemon/: Pokemon.cpp
Pokemon/src/Pokemon/Pokemons/: Bulbasaur.cpp  Caterpie.cpp  Charmander.cpp  Pidgey.cpp  Pikachu.cpp  Squirtle.cpp  Zubat.cpp
Pokemon/src/Pokemon/Status Effects/: ParalyzedEffect.cpp
Pokemon/src/Utility/: Utility.cpp
